k8s/azerothcore.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ac-worldserver
  namespace: default
  labels:
    tier: game
  annotations:
    linkerd.io/inject: enabled
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ac-worldserver
  template:
    metadata:
      labels:
        app: ac-worldserver
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: ac-worldserver
          image: acore/ac-wotlk-worldserver:master
          ImagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "4"
              memory: "16Gi"
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ac-authserver
  namespace: default
  labels:
    tier: game
  annotations:
    linkerd.io/inject: enabled
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ac-authserver
  template:
    metadata:
      labels:
        app: ac-authserver
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: ac-authserver
          image: acore/ac-wotlk-authserver:master
          ImagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "4"
              memory: "16Gi"
      imagePullSecrets:
        - name: regcred
