k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sasin91-xyz
  namespace: default
  annotations:
    cert-manager.io/issuer: "letsencrypt"
    konghq.com/protocols: "https"
    konghq.com/https-redirect-status-code: "301"
    konghq.com/strip-path: "false"
    konghq.com/plugins: set-l5d-header
    linkerd/inject: ingress
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - sasin91.xyz
      secretName: sasin91-xyz
  rules:
    - host: sasin91.xyz
      http:
        paths:
          - backend:
              service:
                name: nextjs-service
                port:
                  name: app
            path: /
            pathType: Prefix
